        - Allow disable-and-reload when there's an error loading a mod.
    Bugfixes:
        - Fixed recipes now become accessible when their crafter does.
        - Keyboard and UI fixes/improvements in the Welcome screen.
    Internal changes:
        - Allow tooltips to be displayed when hovering over radio buttons.
        - Require parentheses when mixing && and || in the same expression.
----------------------------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: September 8th 2024
    Bugfixes:
        - Fix boiler recipes that accept multiple input temperatures; they respect the selected temperature again.
          (Note: This is specific to boilers. Factorio does not let assembly machines react to input temperatures.)
----------------------------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: September 6th 2024
    Features:
        - Add an "Auto balance" button to the summary page, allowing quick balancing of inputs and outputs across
          multi-page projects. Known issue: The button requires multiple clicks, which appears to be related to #169.
        - Add a right-click context menu to the tab header.
        - Allow fixed amounts on fuel, ingredients, and products, in addition to buildings.
        - Add a setting to force software rendering if hardware rendering does not work on your system.
        - Switch tabs using Ctrl+PgUp / Ctrl+PgDown
        - Reorder tabs using Ctrl+Shift+PgUp / Ctrl+Shift+PgDown
        - Add 'Produce it as a spent fuel' recipe selection.
        - You can now open projects from a Windows context-menu. If the project was not opened before, then Yafc uses
          the launch-settings from the most-recently opened project.
        - Move the Legacy Summary and Import from clipboard buttons to the main/hamburger menu.
        - Clean up (unneeded) aliasing from icons.
    Bugfixes: