@@ -35,12 +35,12 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
-    # Execute all unit tests in the solution
-    - name: Execute unit tests
-      run: dotnet test
-
     - name: Restore dependencies
       run: dotnet restore
+
+    # Execute all unit tests in the solution
+    - name: Execute unit tests
+      run: dotnet test -p:Platform=x64
 
     - name: Format
       run: dotnet format --verify-no-changes --diagnostics IDE0055 --severity info --verbosity diagnostic
