@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>YafcCommandLineToolExample</RootNamespace>
     <OutputType>Exe</OutputType>
+    <Platforms>x64;ARM64</Platforms>
   </PropertyGroup>
 
     <ItemGroup>
