@@ -17,42 +17,72 @@ Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "Yafc.Model.Tests", "Yafc.Mo
 EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{D6A715CB-5C17-4DD7-9ADA-5D7F44FADFCF}"
 	ProjectSection(SolutionItems) = preProject
+		build.sh = build.sh
 		changelog.txt = changelog.txt
 		Directory.Build.props = Directory.Build.props
 	EndProjectSection
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
-		Debug|Any CPU = Debug|Any CPU
-		Release|Any CPU = Release|Any CPU
+		Debug|ARM64 = Debug|ARM64
+		Debug|x64 = Debug|x64
+		Release|ARM64 = Release|ARM64
+		Release|x64 = Release|x64
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{73EBA162-A3BE-43CC-9B55-CA16332F439D}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{73EBA162-A3BE-43CC-9B55-CA16332F439D}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{73EBA162-A3BE-43CC-9B55-CA16332F439D}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{73EBA162-A3BE-43CC-9B55-CA16332F439D}.Release|Any CPU.Build.0 = Release|Any CPU
-		{70F74D2B-9747-4185-B369-64F77BC8D0D5}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{70F74D2B-9747-4185-B369-64F77BC8D0D5}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{70F74D2B-9747-4185-B369-64F77BC8D0D5}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{70F74D2B-9747-4185-B369-64F77BC8D0D5}.Release|Any CPU.Build.0 = Release|Any CPU
-		{CED05634-9E9E-40EF-9A92-30C8650B14C7}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{CED05634-9E9E-40EF-9A92-30C8650B14C7}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{CED05634-9E9E-40EF-9A92-30C8650B14C7}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{CED05634-9E9E-40EF-9A92-30C8650B14C7}.Release|Any CPU.Build.0 = Release|Any CPU
-		{4B64D4DD-B6ED-457D-9000-EA0381585959}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{4B64D4DD-B6ED-457D-9000-EA0381585959}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{4B64D4DD-B6ED-457D-9000-EA0381585959}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{4B64D4DD-B6ED-457D-9000-EA0381585959}.Release|Any CPU.Build.0 = Release|Any CPU
-		{57E8CAE8-A3F8-4532-B32F-09347852479E}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{57E8CAE8-A3F8-4532-B32F-09347852479E}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{57E8CAE8-A3F8-4532-B32F-09347852479E}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{57E8CAE8-A3F8-4532-B32F-09347852479E}.Release|Any CPU.Build.0 = Release|Any CPU
-		{66B66728-84F0-4242-B49A-B9D746A3CCA5}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{66B66728-84F0-4242-B49A-B9D746A3CCA5}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{66B66728-84F0-4242-B49A-B9D746A3CCA5}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{66B66728-84F0-4242-B49A-B9D746A3CCA5}.Release|Any CPU.Build.0 = Release|Any CPU
+		{73EBA162-A3BE-43CC-9B55-CA16332F439D}.Debug|ARM64.ActiveCfg = Debug|ARM64
+		{73EBA162-A3BE-43CC-9B55-CA16332F439D}.Debug|ARM64.Build.0 = Debug|ARM64
+		{73EBA162-A3BE-43CC-9B55-CA16332F439D}.Debug|x64.ActiveCfg = Debug|x64
+		{73EBA162-A3BE-43CC-9B55-CA16332F439D}.Debug|x64.Build.0 = Debug|x64
+		{73EBA162-A3BE-43CC-9B55-CA16332F439D}.Release|ARM64.ActiveCfg = Release|ARM64
+		{73EBA162-A3BE-43CC-9B55-CA16332F439D}.Release|ARM64.Build.0 = Release|ARM64
+		{73EBA162-A3BE-43CC-9B55-CA16332F439D}.Release|x64.ActiveCfg = Release|x64
+		{73EBA162-A3BE-43CC-9B55-CA16332F439D}.Release|x64.Build.0 = Release|x64
+		{70F74D2B-9747-4185-B369-64F77BC8D0D5}.Debug|ARM64.ActiveCfg = Debug|ARM64
+		{70F74D2B-9747-4185-B369-64F77BC8D0D5}.Debug|ARM64.Build.0 = Debug|ARM64
+		{70F74D2B-9747-4185-B369-64F77BC8D0D5}.Debug|x64.ActiveCfg = Debug|x64
+		{70F74D2B-9747-4185-B369-64F77BC8D0D5}.Debug|x64.Build.0 = Debug|x64
+		{70F74D2B-9747-4185-B369-64F77BC8D0D5}.Release|ARM64.ActiveCfg = Release|ARM64
+		{70F74D2B-9747-4185-B369-64F77BC8D0D5}.Release|ARM64.Build.0 = Release|ARM64
+		{70F74D2B-9747-4185-B369-64F77BC8D0D5}.Release|x64.ActiveCfg = Release|x64
+		{70F74D2B-9747-4185-B369-64F77BC8D0D5}.Release|x64.Build.0 = Release|x64
+		{CED05634-9E9E-40EF-9A92-30C8650B14C7}.Debug|ARM64.ActiveCfg = Debug|ARM64
+		{CED05634-9E9E-40EF-9A92-30C8650B14C7}.Debug|ARM64.Build.0 = Debug|ARM64
+		{CED05634-9E9E-40EF-9A92-30C8650B14C7}.Debug|x64.ActiveCfg = Debug|x64
+		{CED05634-9E9E-40EF-9A92-30C8650B14C7}.Debug|x64.Build.0 = Debug|x64
+		{CED05634-9E9E-40EF-9A92-30C8650B14C7}.Release|ARM64.ActiveCfg = Release|ARM64
+		{CED05634-9E9E-40EF-9A92-30C8650B14C7}.Release|ARM64.Build.0 = Release|ARM64
+		{CED05634-9E9E-40EF-9A92-30C8650B14C7}.Release|x64.ActiveCfg = Release|x64
+		{CED05634-9E9E-40EF-9A92-30C8650B14C7}.Release|x64.Build.0 = Release|x64
+		{4B64D4DD-B6ED-457D-9000-EA0381585959}.Debug|ARM64.ActiveCfg = Debug|ARM64
+		{4B64D4DD-B6ED-457D-9000-EA0381585959}.Debug|ARM64.Build.0 = Debug|ARM64
+		{4B64D4DD-B6ED-457D-9000-EA0381585959}.Debug|x64.ActiveCfg = Debug|x64
+		{4B64D4DD-B6ED-457D-9000-EA0381585959}.Debug|x64.Build.0 = Debug|x64
+		{4B64D4DD-B6ED-457D-9000-EA0381585959}.Release|ARM64.ActiveCfg = Release|ARM64
+		{4B64D4DD-B6ED-457D-9000-EA0381585959}.Release|ARM64.Build.0 = Release|ARM64
+		{4B64D4DD-B6ED-457D-9000-EA0381585959}.Release|x64.ActiveCfg = Release|x64
+		{4B64D4DD-B6ED-457D-9000-EA0381585959}.Release|x64.Build.0 = Release|x64
+		{57E8CAE8-A3F8-4532-B32F-09347852479E}.Debug|ARM64.ActiveCfg = Debug|ARM64
+		{57E8CAE8-A3F8-4532-B32F-09347852479E}.Debug|ARM64.Build.0 = Debug|ARM64
+		{57E8CAE8-A3F8-4532-B32F-09347852479E}.Debug|x64.ActiveCfg = Debug|x64
+		{57E8CAE8-A3F8-4532-B32F-09347852479E}.Debug|x64.Build.0 = Debug|x64
+		{57E8CAE8-A3F8-4532-B32F-09347852479E}.Release|ARM64.ActiveCfg = Release|ARM64
+		{57E8CAE8-A3F8-4532-B32F-09347852479E}.Release|ARM64.Build.0 = Release|ARM64
+		{57E8CAE8-A3F8-4532-B32F-09347852479E}.Release|x64.ActiveCfg = Release|x64
+		{57E8CAE8-A3F8-4532-B32F-09347852479E}.Release|x64.Build.0 = Release|x64
+		{66B66728-84F0-4242-B49A-B9D746A3CCA5}.Debug|ARM64.ActiveCfg = Debug|ARM64
+		{66B66728-84F0-4242-B49A-B9D746A3CCA5}.Debug|ARM64.Build.0 = Debug|ARM64
+		{66B66728-84F0-4242-B49A-B9D746A3CCA5}.Debug|x64.ActiveCfg = Debug|x64
+		{66B66728-84F0-4242-B49A-B9D746A3CCA5}.Debug|x64.Build.0 = Debug|x64
+		{66B66728-84F0-4242-B49A-B9D746A3CCA5}.Release|ARM64.ActiveCfg = Release|ARM64
+		{66B66728-84F0-4242-B49A-B9D746A3CCA5}.Release|ARM64.Build.0 = Release|ARM64
+		{66B66728-84F0-4242-B49A-B9D746A3CCA5}.Release|x64.ActiveCfg = Release|x64
+		{66B66728-84F0-4242-B49A-B9D746A3CCA5}.Release|x64.Build.0 = Release|x64
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
+	EndGlobalSection
+	GlobalSection(ExtensibilityGlobals) = postSolution
+		SolutionGuid = {D5772B64-5E65-4533-BFE9-27051CDF1CB9}
 	EndGlobalSection
 EndGlobal
