@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>Yafc.Model</RootNamespace>
         <Nullable>enable</Nullable>
+        <Platforms>x64;ARM64</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
